# cinder-finder

./: LICENSE.md  README.md  nuxt.config.js  package-lock.json  package.json  pom.xml  tsconfig.json
.github/workflows/: selenium-tests.yml  server-tests.yml
client/: .gitignore  README.md  draft.js  draft.md  ecosystem.config.js  menus.md  nuxt.config.js  package-lock.json  package.json  vuetify.options.js
client/components/: CardLink.vue  Chat.vue  LocationIcon.vue  LocationPicker.vue  PlatformPicker.vue  RoomTypePicker.vue
client/domain/: Game.ts  IdentifiedRoom.ts  Location.ts  LocationType.ts  LongPollingEvent.ts  Platform.ts  RoomDetails.ts  RoomDraft.ts  RoomMember.ts  RoomType.ts  User.ts
client/i18n/: en.js
client/layouts/: default.vue
client/mixin/: GameAwarePageMixin.ts  LoggedUserAwarePageMixin.ts  WindowFocusAwareMixin.ts
client/pages/: index.vue
client/plugins/: ApiSessionIdSettingAxiosInterceptor.ts  ErrorPageRedirectingInterceptor.ts  (+1 more)
client/static/: main.css  (+2 more)
components/: CardLink.vue  Chat.vue  LocationPicker.vue  PlatformPicker.vue  RoomTypePicker.vue
domain/: ChatMessage.ts  LocationType.ts  RoomDefinition.ts  RoomDraft.ts
i18n/: en.js
layouts/: default.vue  error.vue
mixin/: GameAwarePageMixin.ts  LoggedUserAwarePageMixin.ts
pages/: error.vue  type_script_demo.vue
plugins/: ErrorPageRedirectingInterceptor.ts
selenium/: .gitignore  conftest.py  pyproject.toml  test_room_workflow.py  test_rooms_workflow.py  test_utils.py
server/: pom.xml
service/: LongPoller.ts  RuleFactory.ts
static/: EldenRingBosses.ts  main.css
(+117 files in other folders)
